--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "docx": "^9.5.0",
     "next": "^15.3.2",
     "next-auth": "5.0.0-beta.25",
     "react": "^19.0.0",
