--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@emotion/styled": "^11.14.0",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "@mui/icons-material": "^7.1.0",
+    "@mui/lab": "^7.0.0-beta.14",
     "@mui/material": "^7.1.0",
     "@prisma/client": "^6.5.0",
     "@t3-oss/env-nextjs": "^0.12.0",
